--- a/Globomantics.Core/appsettings.json
+++ b/Globomantics.Core/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "GlobomanticsDb": "Server=globosql;Database=Globomantics;User Id=globo_dbuser;Password=SqlonLinux?!;MultipleActiveResultSets=true"
+    "GlobomanticsDb": "Server=globosql;Database=Globomantics;User Id=globo_dbuser;Password=Th@nhy99;MultipleActiveResultSets=true"
   },
   "AuthN": {
     "Authority": "https://id-local.globomantics.com:44395",
