--- a/nginx/id-local.conf
+++ b/nginx/id-local.conf
@@ -8,10 +8,10 @@ x509_extensions    = v3_ca
 [req_distinguished_name]
 countryName                 = US
 countryName_default         = US
-stateOrProvinceName         = Minnesota
-stateOrProvinceName_default = Minnesota
-localityName                = St. Paul
-localityName_default        = St. Paul
+stateOrProvinceName         = Washington
+stateOrProvinceName_default = Washington
+localityName                = Bellevue
+localityName_default        = Bellevue
 organizationName            = Globomantics
 organizationName_default    = Globomantics
 organizationalUnitName      = Development
