--- a/k8s/certs/kd-local.conf
+++ b/k8s/certs/kd-local.conf
@@ -1,6 +1,6 @@
 [req]
 default_bits       = 2048
-default_keyfile    = id-local.key
+default_keyfile    = kd-local.key
 distinguished_name = req_distinguished_name
 req_extensions     = req_ext
 x509_extensions    = v3_ca
