--- a/k8s/globo-api.configmap.yml
+++ b/k8s/globo-api.configmap.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: globo-api-config
 data:    
-  AuthN__Authority: "https://id.local.com"
+  AuthN__Authority: "https://globois4-service:5000"
   AuthN__SwaggerClientId: "globo-swagger"
   AuthN__ApiName: "glob_api"
   AuthN__Scopes: "openid profile glob_profile"
