--- a/k8s/globo-is4.yml
+++ b/k8s/globo-is4.yml
@@ -42,6 +42,9 @@ spec:
             cpu: "200m"
         ports:
         - containerPort: 5000
+        env:
+        - name: ASPNETCORE_URLS
+          value: "http://*:5000"        
 
 ---
 apiVersion: v1
