--- a/eks/Makefile
+++ b/eks/Makefile
@@ -5,7 +5,7 @@ dashboard:
 	kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml
 	kubectl apply -f https://gist.githubusercontent.com/dahlsailrunner/bbd453f3bb6259b66c08a70d0908283f/raw/5727723217e2df4b65d8933adf04d009cfb0fe3f/local-dashboard-account.yml
 
-ngnix:
+nginx:
 	kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.4.0/deploy/static/provider/cloud/deploy.yaml
 
 seq:
@@ -31,8 +31,6 @@ up:
 	kubectl apply -f globo-ui.yml
 	kubectl apply -f globo-api.configmap.yml
 	kubectl apply -f globo-api.yml
-	kubectl apply -f globo-ingress.yml
-	kubectl apply -f kd-ingress.yml
 
 down:
 	kubectl delete -f globo-seq.yml
@@ -44,8 +42,6 @@ down:
 	kubectl delete -f globo-ui.yml
 	kubectl delete -f globo-api.configmap.yml
 	kubectl delete -f globo-api.yml
-	kubectl delete -f globo-ingress.yml
-	kubectl delete -f kd-ingress.yml
 
 rm_seq:
 	kubectl delete -f globo-seq.yml
@@ -71,17 +67,17 @@ config:
 	kubectl create secret generic globoconn-secrets \
                 --from-literal=ConnectionStrings__IS4DbConnection="Server=globosql-service;Database=GlobomanticsIdSrv;User Id=sa;Password=Th@nhy99;MultipleActiveResultSets=true;" \
                 --from-literal=ConnectionStrings__GlobomanticsDb="Server=globosql-service;Database=Globomantics;User Id=globo_dbuser;Password=Th@nhy99;MultipleActiveResultSets=true;"
-	kubectl create secret tls idlocal-tls --key="certs/id-local.key" --cert="certs/id-local.crt"
-	kubectl create secret tls seqlocal-tls --key="certs/seq-local.key" --cert="certs/seq-local.crt"
-	kubectl create secret tls wwwlocal-tls --key="certs/www-local.key" --cert="certs/www-local.crt"
-	kubectl -n kubernetes-dashboard create secret tls kdlocal-tls --key="certs/kd-local.key" --cert="certs/kd-local.crt"
+	kubectl create secret tls id-vmwuem-tls --key="certs/id-vmwuem.key" --cert="certs/id-vmwuem.crt"
+	kubectl create secret tls seq-vmwuem-tls --key="certs/seq-vmwuem.key" --cert="certs/seq-vmwuem.crt"
+	kubectl create secret tls www-vmwuem-tls --key="certs/www-vmwuem.key" --cert="certs/www-vmwuem.crt"
+	kubectl -n kubernetes-dashboard create secret tls kd-vmwuem-tls --key="certs/kd-vmwuem.key" --cert="certs/kd-vmwuem.crt"
 
 rm_config:
 	kubectl delete secret globoconn-secrets
-	kubectl delete secret idlocal-tls
-	kubectl delete secret seqlocal-tls
-	kubectl delete secret wwwlocal-tls
-	kubectl delete secret -n kubernetes-dashboard kdlocal-tls
+	kubectl delete secret id-vmwuem-tls
+	kubectl delete secret seq-vmwuem-tls
+	kubectl delete secret www-vmwuem-tls
+	kubectl delete secret -n kubernetes-dashboard kd-vmwuem-tls
 
 get_token:
 	kubectl -n kubernetes-dashboard create token admin-user
