--- a/eks/certs/id-vmwuem.conf
+++ b/eks/certs/id-vmwuem.conf
@@ -1,6 +1,6 @@
 [req]
 default_bits       = 2048
-default_keyfile    = seq-local.key
+default_keyfile    = id-vmwuem.key
 distinguished_name = req_distinguished_name
 req_extensions     = req_ext
 x509_extensions    = v3_ca
@@ -16,8 +16,8 @@ organizationName            = Globomantics
 organizationName_default    = Globomantics
 organizationalUnitName      = Development
 organizationalUnitName_default = Development
-commonName                  = seq.local.com
-commonName_default          = seq.local.com
+commonName                  = id.vmwuem.com
+commonName_default          = id.vmwuem.com
 commonName_max              = 64
 
 [req_ext]
@@ -27,4 +27,4 @@ subjectAltName = @alt_names
 subjectAltName = @alt_names
 
 [alt_names]
-DNS.1   = seq.local.com
+DNS.1   = id.vmwuem.com
