--- a/eks/globo-sql.yml
+++ b/eks/globo-sql.yml
@@ -23,10 +23,6 @@ spec:
           value: "Y"        
         - name: SA_PASSWORD
           value: "Th@nhy99"  
-        resources:
-          limits:
-            memory: "2048Mi"
-            cpu: "2048m"  
 ---               
 apiVersion: v1
 kind: Service
@@ -39,8 +35,7 @@ spec:
     - protocol: TCP
       port: 1433
       targetPort: 1433
-      nodePort: 31433
-  type: NodePort
+  type: LoadBalancer
 
 ---
 apiVersion: v1
